properly build for java 17, not java 21